--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     color: hsl(0, 0%, 100%);
     font-family: "Open Sans", sans-serif;
     margin: 0%;
+    /* padding:20px; */
   }
   
   .section {
@@ -151,6 +152,7 @@ body {
   .productive-section {
     display: flex;
     align-items: center;
+    /* flex-wrap: wrap; */
   }
   
   .productive-content {
@@ -386,4 +388,27 @@ body {
   
   .collaboration a {
     color: hsl(228, 45%, 44%);
+  }
+
+  @media screen and (max-width: 375px){
+    .productive-img{
+        display: block;
+        align-items: center;
+        padding: 2rem 0 0 4rem;
+    
+    }
+
+    .productive-content{
+        padding-top: 6rem;
+    }
+    .productive-section{
+        display: inline-block;
+        align-items: center;
+        justify-content: center;
+
+    }
+    .prod-header-text {
+        display: inline;
+    }
+
   }
