--- a/style.css
+++ b/style.css
@@ -411,4 +411,22 @@ body {
         display: inline;
     }
 
+    .testimonial-section {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        margin: 50px 0 50px 10px;
+    
+      }
+      .testimonial-item-reviewer {
+        display: flex;
+        padding-top: 1rem;
+        width: 100%;
+      }
+      .testimonial-item{
+        margin: 20px 0 20px 0px;
+      }
+
   }
